syntax = "proto3";

package models;
option go_package = "./models";

message FileMetadata {
  string file_name = 1;
  string file_sha256 = 2;
  uint64 file_size = 3;
  oneof SpecificData{
    ClientFileInfo client_file_info = 4;
    ServerFileInfo server_file_info = 5;
  }
}

message ClientFileInfo {
  string base_path = 1;
  string file_server = 2;
}

message ServerFileInfo {
  string base_path = 1;
  repeated string authorized_accessors = 2;
}
